--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,11 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - master
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: yourdockerhubusername/frontend   # <-- change per repo
+  IMAGE_NAME: atitbimali/code-ghar-demo-backend   # <-- change per repo
 
 jobs:
   build-and-push:
@@ -40,7 +40,7 @@ jobs:
             ${{ env.IMAGE_NAME }}:${{ env.RUN_NUMBER }}
             ${{ env.IMAGE_NAME }}:latest
       
-      - name: Trigger Jenkins
-        run: |
-          curl -X POST "https://jenkinsurl/YOUR_JOB_NAME/build?token=my-jenkins-token"
+      # - name: Trigger Jenkins
+      #   run: |
+      #     curl -X POST "https://jenkinsurl/YOUR_JOB_NAME/build?token=${{ secrets.JENKINS_TOKEN }}"
 
